# truce-analyzer

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml  truce.toml
.github/workflows/: bake-screenshots.yml  ci.yml  release.yml
docs/: comparison.md  design-builtin.md  design-egui.md  design-iced.md  design-slint.md  design.md
plugins/truce-analyzer-builtin/: Cargo.toml
plugins/truce-analyzer-builtin/src/: lib.rs
plugins/truce-analyzer-core/: Cargo.toml
plugins/truce-analyzer-core/src/: lib.rs
plugins/truce-analyzer-egui/: Cargo.toml
plugins/truce-analyzer-egui/src/: lib.rs
plugins/truce-analyzer-iced/: Cargo.toml
plugins/truce-analyzer-iced/src/: lib.rs
plugins/truce-analyzer-slint/: Cargo.toml
plugins/truce-analyzer-slint/src/: lib.rs
scripts/: bump.sh  release-linux.sh  release-macos.sh  release-windows.ps1  release-windows.sh
src/: core.rs  lib.rs  main.rs  registry.rs  shmem.rs  ui_state.rs
static/: truce-minimal.icns  truce-welcome.html
static/truce-minimal.appiconset/: Contents.json
