[package]
name = "truce-analyzer"
version = "0.48.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "truce-analyzer-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
# Defaults pin the no-signing-required formats so `cargo truce
# install` (and CI without secrets) work without any developer-
# credential setup. `au` (AU v3 install path) needs a Developer
# ID Application identity with a real team ID; `aax` needs PACE /
# iLok signing + the AAX SDK. Both are opt-in per command
# (`--au2` for AU v2 only, `--au3`, `--aax`) or per build
# (enable the feature explicitly).
default = ["clap", "vst3", "lv2", "standalone"]
# Per-format features propagate to `truce/<format>` so the meta
# crate's macro expansion + prelude re-exports gate correctly.
# Without this, `truce/clap` stays off, `truce::plugin!` doesn't
# emit the CLAP entry-point symbols, and the host can't find them.
# Mirrors the example-gain pattern.
clap = ["dep:truce-clap", "dep:clap-sys", "truce/clap"]
vst3 = ["dep:truce-vst3", "truce/vst3"]
lv2 = ["dep:truce-lv2", "truce/lv2"]
au = ["dep:truce-au"]
aax = ["dep:truce-aax"]
shell = ["truce/shell"]
standalone = ["dep:truce-standalone", "truce-standalone/gui"]

[dependencies]
# `default-features = false` so iOS / no-default-features builds
# don't drag in `truce/clap` (and its truce-clap transitive) when
# only `au` is enabled — truce-clap doesn't have an iOS arm for
# `parent_ptr` and fails to compile against the iOS SDK.
# truce crates aren't on crates.io yet — pull from the github repo at
# the v0.48.4 tag. Swap each to `version = "0.48.4"` once they're
# published.
truce = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", default-features = false }
truce-gui = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4" }
truce-egui = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4" }
truce-core = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4" }
ringbuf = "0.5"
truce-clap = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
truce-vst3 = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
truce-lv2 = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
truce-au = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
truce-aax = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
truce-standalone = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4", optional = true }
clap-sys = { version = "0.5", optional = true }
egui = "0.34"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
truce-test = { git = "https://github.com/truce-audio/truce.git", tag = "v0.48.4" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Custom profile for `cargo truce install --shell`. Required by the
# shell feature — the shell binary lands at `target/shell/...`,
# independent of `target/release/` and `target/debug/`. Inherits
# release for DSP perf parity.
[profile.shell]
inherits = "release"
