[package]
name = "truce-analyzer"
version = "0.52.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "truce-analyzer-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
# Defaults pin the no-signing-required formats so `cargo truce
# install` (and CI without secrets) work without any developer-
# credential setup. `au` (AU v3 install path) needs a Developer
# ID Application identity with a real team ID; `aax` needs PACE /
# iLok signing + the AAX SDK. Both are opt-in per command
# (`--au2` for AU v2 only, `--au3`, `--aax`) or per build
# (enable the feature explicitly).
default = ["clap", "vst3", "lv2", "aax", "au", "standalone"]
# Per-format features propagate to `truce/<format>` so the meta
# crate's macro expansion + prelude re-exports gate correctly.
# Without this, `truce/clap` stays off, `truce::plugin!` doesn't
# emit the CLAP entry-point symbols, and the host can't find them.
# Mirrors the example-gain pattern.
clap = ["dep:truce-clap", "dep:clap-sys", "truce/clap"]
vst3 = ["dep:truce-vst3", "truce/vst3"]
lv2 = ["dep:truce-lv2", "truce/lv2"]
au = ["dep:truce-au"]
aax = ["dep:truce-aax"]
shell = ["truce/shell"]
standalone = ["dep:truce-standalone", "truce-standalone/gui"]

[dependencies]
# `default-features = false` so iOS / no-default-features builds
# don't drag in `truce/clap` (and its truce-clap transitive) when
# only `au` is enabled — truce-clap doesn't have an iOS arm for
# `parent_ptr` and fails to compile against the iOS SDK.
truce = { version = "0.52", default-features = false }
truce-gui = "0.52"
truce-egui = "0.52"
truce-core = "0.52"
ringbuf = "0.5"
truce-clap = { version = "0.52", optional = true }
truce-vst3 = { version = "0.52", optional = true }
truce-lv2 = { version = "0.52", optional = true }
truce-au = { version = "0.52", optional = true }
truce-aax = { version = "0.52", optional = true }
truce-standalone = { version = "0.52", optional = true }
clap-sys = { version = "0.5", optional = true }
egui = "0.34"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
truce-test = "0.52"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Custom profile for `cargo truce install --shell`. Required by the
# shell feature — the shell binary lands at `target/shell/...`,
# independent of `target/release/` and `target/debug/`. Inherits
# release for DSP perf parity.
[profile.shell]
inherits = "release"
