[package]
name = "truce-analyzer-truce-analyzer-iced"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["clap", "vst3"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
vst2 = ["dep:truce-vst2"]
au = ["dep:truce-au"]
aax = ["dep:truce-aax"]
dev = ["truce/dev"]

[dependencies]
truce = { workspace = true }
truce-gui = { workspace = true }
truce-clap = { workspace = true, optional = true }
truce-vst3 = { workspace = true, optional = true }
truce-vst2 = { workspace = true, optional = true }
truce-au = { workspace = true, optional = true }
truce-aax = { workspace = true, optional = true }
clap-sys = { version = "0.5", optional = true }

[dev-dependencies]
truce-test = { workspace = true }
